tests/functional/lang/parse-fail-unexpected-in.err.exp
error: syntax error, unexpected 'in', expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.in
             |   ^
            2|
